[package]
name = "torque-tracker"
version = "0.1.0"
edition = "2024"
license = "GPL 3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font8x8 = "0.3.1"
wgpu = {version = "25.0.0", optional = true }
ascii = "1.1.0"
winit = "0.30.9"
torque-tracker-engine = { path = "../torque-tracker-engine" }
smol = "2.0.2"
paste = "1.0.15"
cpal = "0.15.3"
triple_buffer = "8.1.0"
softbuffer = "0.4.6"

[features]
# less artifacts than software scaling. also probably faster
gpu_scaling = ["dep:wgpu"]
default = ["gpu_scaling"]

[lints.clippy]
uninlined_format_args = "allow"

# [profile.dev]
# debug = 0
# panic = "unwind"

# [profile.release]
# strip = true
# lto = true
# codegen-units = 1
# panic = "abort"
