[package]
name = "torque-tracker"
version = "0.1.0"
edition = "2024"
license = "GPL 3.0"
rustc-version = "1.88"
description = "Old school music tracker, reimplementation of schism tracker"
keywords = ["audio", "GUI"]
categories = ["audio"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font8x8 = "0.3.1"
wgpu = { version = "26.0.0", optional = true }
ascii = "1.1.0"
winit = "0.30.11"
torque-tracker-engine = { path = "../torque-tracker-engine" }
smol = "2.0.2"
paste = "1.0.15"
cpal = "0.16.0"
triple_buffer = "8.1.1"
softbuffer = { version="0.4.6", optional = true }
rfd = "0.15.4"
symphonia = "0.5.4"

[features]
# needs to be one, but not both
# less artifacts than software scaling. also probably faster
gpu_scaling = ["dep:wgpu"]
soft_scaling = ["dep:softbuffer"]

default = ["gpu_scaling"]

[lints.clippy]
uninlined_format_args = "allow"
