[package]
name = "torque-tracker"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0"
rustc-version = "1.88"
description = "Old school music tracker, reimplementation of schism tracker"
keywords = ["audio", "GUI"]
repository = "https://tangled.sh/did:plc:54jgbo4psy24qu2bk4njtpc4/torque-tracker"
categories = ["multimedia::audio"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font8x8 = "0.3.1"
wgpu = { version = "26.0.0", optional = true }
ascii = "1.1.0"
winit = "0.30.11"
torque-tracker-engine = "0.1.0"
smol = "2.0.2"
paste = "1.0.15"
cpal = "0.16.0"
triple_buffer = "8.1.1"
softbuffer = { version="0.4.6", optional = true }
rfd = "0.15.4"
symphonia = "0.5.4"
accesskit_winit = { version = "0.29.0", optional = true }
accesskit = { version = "0.21.0", optional = true }

[features]
# needs to be one, but not both
# less artifacts than software scaling. also probably faster
gpu_scaling = ["dep:wgpu"]
soft_scaling = ["dep:softbuffer"]
# accessability isn't an optional feature of course, but i want to make this progream compatible with embedded at some point.
# To not make this harder than necessary it is done like this
accesskit = ["dep:accesskit_winit", "dep:accesskit"]

default = ["gpu_scaling", "accesskit"]

[lints.clippy]
uninlined_format_args = "allow"
